--- a/ale.plugin.yaml
+++ b/ale.plugin.yaml
@@ -8,9 +8,9 @@ homepage: https://ale.run
 repository: ale-run/plugin-aws
 main: lib/index.js
 icon:
-  src: aws.svg
+  src: logo.svg
   background: transparent
-  scale: 1
+  scale: 0.85
   shape: square
 schema:
   type: object
