Improve AWS Modules: Deployment Options and Endpoint Handling (RDS, EC2, MemoryDB, S3, ECS)
aws-rds
• Deployment Options
• Added username and password as required options and fixed a bug where the provided values were ignored in favor of default ones (with the password now base64 encoded).
• Removed db_subnet_group_name from the required options. If not provided, a new group is created using private subnets.
• Removed vpcId from the required options.
• Endpoint Exposure
• Moved endpoint information from the “domain” field in the Resources Tab to the “ingress” field.
• Destroy Operation
• Changed the destroy process to use options stored in the store instead of calling readOptions.

aws-ec2
• Removed the requirement for vpcId in the deployment options.

aws-memory-db
• Deployment Options
• Added an option to input either subnet IDs or a subnet group name (moved away from the previous approach of querying subnets by the tag Tier='database').
• Resource Tab
• Moved endpoint information from the “domain” field to the “ingress” field (the domain field is no longer visible).

aws-rds (Additional Change)
• Added an option for subnet IDs in deployment (changed from relying on a subnet group name; if not provided, it used to query subnets with the tag Tier='private').
• Updated the Resources Tab to move the endpoint information from the “domain” field to the “ingress” field.

aws-s3
• Applied linting.
• Removed env from the deployment options.

aws-ecs
• Added terminal connection error handling.
• Added the getMetric method (previously part of AwsAppController).
• Applied linting and added a readonly option to the deployment options.

--- a/lib/app/aws-ec2/aws-ec2.app.yaml
+++ b/lib/app/aws-ec2/aws-ec2.app.yaml
@@ -35,32 +35,45 @@ schema:
       attrs:
         placeholder: vpc-123abc456def789
         readonly: true
-    subnetTier:
-      title: Access Tier
+    subnetId:
+      title: Subnet ID
       type: string
-      default: private
-      enum:
-        - priavte
-        - public
+      maxLength: 255
       attrs:
-        placeholder: Select a Tier(private or public)
+        placeholder: subnet-123abc456def789
         readonly: true
-        labels:
-          - priavte
-          - public
-    subnetZone:
-      title: Availability Zone
-      type: string
-      default: a
-      enum:
-        - a
-        - c
+    associatePublicIpAddress:
+      title: Associate Public Ip Address
+      type: boolean
+      default: false
       attrs:
-        placeholder: Select a availability zone
         readonly: true
-        labels:
-          - a zone
-          - b zone
+    # subnetTier:
+    #   title: Access Tier
+    #   type: string
+    #   default: private
+    #   enum:
+    #     - priavte
+    #     - public
+    #   attrs:
+    #     placeholder: Select a Tier(private or public)
+    #     readonly: true
+    #     labels:
+    #       - priavte
+    #       - public
+    # subnetZone:
+    #   title: Availability Zone
+    #   type: string
+    #   default: a
+    #   enum:
+    #     - a
+    #     - c
+    #   attrs:
+    #     placeholder: Select a availability zone
+    #     readonly: true
+    #     labels:
+    #       - a zone
+    #       - b zone
     instanceType:
       title: Instance Type
       type: string
@@ -80,23 +93,24 @@ schema:
       maxLength: 4
       attrs:
         placeholder: 8
-    env:
-      title: Environment variables
-      type: array
-      items:
-        type: object
-        properties:
-          name:
-            type: string
-          value:
-            type: string
-      additionalProperties: true
-      attrs:
-        type: env
+        readonly: true  
+    # env:
+    #   title: Environment variables
+    #   type: array
+    #   items:
+    #     type: object
+    #     properties:
+    #       name:
+    #         type: string
+    #       value:
+    #         type: string
+    #   additionalProperties: true
+    #   attrs:
+    #     type: env
   required:
     - region
     - vpcId
-    - subnetTier
-    - subnetZone
+    - subnetId
+    - associatePublicIp
     - instanceType
 
