Updated AWS Lambda metrics, improved AWS EC2 deployment options and start/stop behavior
- **AWS Lambda**
  - Changed aggregation method of  and  metrics from  to
- **AWS EC2**
  - Added / statuses

- **AWS EC2 Deployment Option Updates**
  - Added options for selecting  and
  - Added inputs for  and
  - Implemented API to fetch image info based on AMI ID ()
  - Set default username based on image name if  is not provided (may not be accurate)

- **AWS EC2 Start/Stop Improvements**
  - Fixed issue where a new instance was created during start/stop
    - Stopped using Terraform
    - Switched to AWS SDK API for start/stop operations
    - Handled public IP changes using Terraform
  - Improved status responses to return /
  - Subnet ID now defaults to plugin settings if not provided by user

--- a/lib/app/aws-memory-db/aws-memory-db.app.yaml
+++ b/lib/app/aws-memory-db/aws-memory-db.app.yaml
@@ -56,7 +56,7 @@ schema:
         placeholder: subnet-123abc456def789,subnet-123def456abc789
         readonly: true
     subnetGroupName:
-      title: DB Subnet GRoup Name
+      title: Subnet Group Name (Subnet Group Name or Subnet IDs)
       type: string
       maxLength: 255
       attrs:
